--- a/static/monitor.html
+++ b/static/monitor.html
@@ -195,7 +195,7 @@
             <div class="stat">State: <span id="user-state">active</span></div>
         </div>
         <div class="controls">
-            <button class="btn btn-secondary" onclick="location.href='dashboard.html'">Back</button>
+            <button class="btn btn-secondary" onclick="history.back()">Back</button>
             <button class="btn btn-secondary" onclick="exportConversation()">Export</button>
             <button class="btn btn-danger" onclick="haltConversation()">Halt</button>
         </div>
