--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -369,8 +369,8 @@
             <!-- Monitor View -->
             <div id="monitor" class="view">
                 <div class="controls" style="margin-bottom: 20px;">
-                    <input type="text" id="user-search" placeholder="Search by user ID..." style="padding: 8px 12px; background: #1a1a1a; border: 1px solid #2a2a2a; border-radius: 6px; color: #fff; width: 300px;">
-                    <select id="state-filter" style="padding: 8px 12px; background: #1a1a1a; border: 1px solid #2a2a2a; border-radius: 6px; color: #fff;">
+                    <input type="text" id="user-search" placeholder="Search by user ID..." oninput="filterUsers()" style="padding: 8px 12px; background: #1a1a1a; border: 1px solid #2a2a2a; border-radius: 6px; color: #fff; width: 300px;">
+                    <select id="state-filter" onchange="filterUsers()" style="padding: 8px 12px; background: #1a1a1a; border: 1px solid #2a2a2a; border-radius: 6px; color: #fff;">
                         <option value="all">All States</option>
                         <option value="active">Active</option>
                         <option value="halted">Halted</option>
@@ -719,6 +719,7 @@
                 if (!response.ok) throw new Error('Failed to deactivate');
                 
                 showMessage('personalities-message', 'success', `Personality "${templateName}" deactivated`);
+                document.getElementById('filter-status').value = 'all'; // Reset filter to show all
                 await loadTemplates();
             } catch (error) {
                 showMessage('personalities-message', 'error', `Error: ${error.message}`);
@@ -734,6 +735,7 @@
                 if (!response.ok) throw new Error('Failed to activate');
                 
                 showMessage('personalities-message', 'success', `Personality "${templateName}" activated`);
+                document.getElementById('filter-status').value = 'all'; // Reset filter to show all
                 await loadTemplates();
             } catch (error) {
                 showMessage('personalities-message', 'error', `Error: ${error.message}`);
