--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -307,7 +307,7 @@
     <div class="main">
         <div class="topbar">
             <h1 id="page-title">Dashboard</h1>
-            <button class="btn-primary" onclick="location.href='/static/index.html'">User Chat</button>
+            <button class="btn-primary" onclick="window.open('/static/index.html', '_blank')">User Chat</button>
         </div>
         
         <div class="content">
